src/objects/ApexValidationRuleCriterion__mdt.object
<CustomObject>
    <fields>
        <fullName>ApexValidationRule__c</fullName>
        <label>Apex Validation Rule</label>
        <referenceTo>ApexValidationRule__mdt</referenceTo>
        <relationshipLabel>Apex Validation Rule Criteria</relationshipLabel>
        <relationshipName>ApexValidationRuleCriteria</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <metadataRelationshipControllingField>ApexValidationRuleCriterion__mdt.SObjectType__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Apex Field Validation Rules</relationshipLabel>
        <relationshipName>ApexFieldValidationRules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>==</fullName>
                    <label>equals</label>
                </value>
                <value>
                    <fullName>!=</fullName>
                    <label>not equal to</label>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                    <label>less than</label>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                    <label>greater than</label>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                    <label>less or equal</label>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                    <label>greater or equal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SObjectType__c</fullName>
        <label>SObject Type</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Apex Field Validation Rules</relationshipLabel>
        <relationshipName>ApexFieldValidationRules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                    <default>true</default>
                    <label>Value</label>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>RegEx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Apex Validation Rule Criterion</label>
    <pluralLabel>Apex Validation Rule Criteria</pluralLabel>
    <validationRules>
        <fullName>InvalidApexRuleType</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
  ISPICKVAL(
    ApexValidationRule__r.Type__c,
    &apos;Field-Value Pairs&apos;
  )
)</errorConditionFormula>
        <errorDisplayField>ApexValidationRule__c</errorDisplayField>
        <errorMessage>Apex Validation Rule must be Type = &apos;Field-Value Pairs&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SObjectTypesMismatch</fullName>
        <active>true</active>
        <description>SObject Type must match the Apex Validation Rule&apos;s SObject Type</description>
        <errorConditionFormula>SObjectType__c != ApexValidationRule__r.SObjectType__c</errorConditionFormula>
        <errorDisplayField>SObjectType__c</errorDisplayField>
        <errorMessage>SObject Type must match the Apex Validation Rule&apos;s SObject Type</errorMessage>
    </validationRules>
</CustomObject>